--- a/app/inv/templates/inv/subcategoria_list.html
+++ b/app/inv/templates/inv/subcategoria_list.html
@@ -5,29 +5,28 @@
 <div class="card shadow mb-4">
     <!-- Card Header - Dropdown -->
     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-      <h6 class="m-0 font-weight-bold text-primary">Listado de Categorías</h6>
+      <h6 class="m-0 font-weight-bold text-primary">Listado de Sub Categorías</h6>
       <div class="dropdown no-arrow">
         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
           <div class="dropdown-header">Acciones</div>
-          <a class="dropdown-item" href="{% url 'inv:categoria_new' %}"><i class="far fa-calendar-plus"></i> Nueva</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="{% url 'inv:subcategoria_new' %}"><i class="far fa-calendar-plus"></i> Nueva</a>
+          
         </div>
       </div>
     </div>
     <!-- Card Body -->
     <div class="card-body">
       {% if not obj %}
-      <div class="alert alert-info">No hay categorías</div>
+      <div class="alert alert-info">No hay Sub Categorías</div>
       {% else %}
       <table class="table table-striped table-hover">
           <thead>
+              <th>Categoría</th>
               <th>Id</th>
-              <th>Descripción</th>
+              <th>Subcategoria Descripción</th>
               <th>Estado</th>
               <th>F. Creado</th>
               <th>F. Modif.</th>
@@ -36,6 +35,7 @@
           <tbody>
               {% for item in obj %}
               <tr>
+                  <td>{{item.categoria}}</td>
                   <td>{{ item.id }}</td>
                   <td>{{ item.descripcion }}</td>
                   <td>{{ item.estado|yesno:"Activo,Inactivo" }}</td>
