--- a/app/cmp/templates/cmp/proveedor_list.html
+++ b/app/cmp/templates/cmp/proveedor_list.html
@@ -4,29 +4,31 @@
 <div class="card shadow mb-4">
   <!-- Card Header - Dropdown -->
   <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-    <h6 class="m-0 font-weight-bold text-primary">Listado de Unidad de Marca</h6>
+    <h6 class="m-0 font-weight-bold text-primary">Listado de Proveedor</h6>
     <div class="dropdown no-arrow">
       <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
       </a>
       <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
         <div class="dropdown-header">Acciones:</div>
-        <a class="dropdown-item" href="{% url 'inv:marca_new' %}"><i class="far fa-calendar-plus"></i> Nueva</a>
+        <a class="dropdown-item" onclick="return abrir_modal('{% url 'cmp:proveedor_new' %}')" href="#"><i class="far fa-calendar-plus"></i> Nuevo</a>
       </div>
     </div>
   </div>
   <!-- Card Body -->
   <div class="card-body">
     {% if not obj %}
-    <div class="alert alert-info">No hay Marca</div>
+    <div class="alert alert-info">No Proveedores</div>
     {% endif %}
-    <table class="table table-striped table-hover">
+    <table class="table table-striped table-hover dt-responsive nowrap" style="width:100%">
       <thead>
-        <th>Id</th>
-        <th>Descripción</th>
+        <th>Id</th>        
+        <th>Descripcion</th>
+        <th>Dirección</th>
+        <th>Contacto</th>
+        <th>Teléfono</th>
+        <th>EMail</th>
         <th>Estado</th>
-        <th>F. Creado</th>
-        <th>F. Modif</th>
         <th class="all">Acciones</th>
       </thead>
       <tbody>
@@ -34,12 +36,16 @@
         <tr>
           <td>{{ item.id }}</td>
           <td>{{ item.descripcion }}</td>
+          <td>{{item.direccion}}</td>
+          <td>{{ item.contacto }}</td>
+          <td>{{ item.telefono }}</td>
+          <td>{{ item.email }}</td>
           <td>{{item.estado|yesno:"Activo,Inactivo"}}</td>
-          <td>{{ item.fc|date:"d/m/Y H:i:s" }}</td>
-          <td>{{ item.fm|date:"d/m/Y H:i:s"}}</td>
           <td>
-            <a href="{% url 'inv:marca_edit' item.id %}" class="btn btn-warning btn-circle" role="button"><i class="far fa-edit"></i></a> 
-            <a href="{% url 'inv:marca_inactivar' item.id %}" class="btn btn-danger btn-circle" role="button"><i class="far fa-thumbs-down"></i></a>
+            <button class="btn btn-warning btn-circle" onclick="return abrir_modal('{% url 'cmp:proveedor_edit' item.id %}')"><i class="far fa-edit"></i></button>
+            <button class="btn btn-warning btn-circle" onclick="return abrir_modal('{% url 'cmp:proveedor_inactivar' item.id %}')">
+              <i class="far fa-thumbs-down"></i>
+            </button>
           </td>
         </tr>
         {% endfor %}
@@ -48,6 +54,7 @@
   </div>
 </div>
 {% endblock %}
+
 {% block javascript %}
 <script>
 // Call the dataTables jQuery plugin
