--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -25,6 +25,10 @@
     <!-- Custom styles for this page -->
    <link href="{% static 'base/vendor/datatables/dataTables.bootstrap4.min.css'%}" rel="stylesheet">
 
+   <!-- jQuery Confirm -->
+  <link rel="stylesheet" href="{% static 'base/vendor/jquery-confirm/jquery-confirm.min.css' %}">
+
+
 </head>
 
 <body id="page-top">
@@ -441,6 +445,9 @@
     <!-- Page level plugins -->
   <script src="{% static 'base/vendor/datatables/jquery.dataTables.min.js'%}"></script>
   <script src="{% static 'base/vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
+
+  <script src="{% static 'base/vendor/jquery-confirm/jquery-confirm.min.js' %}"></script>
+
 
   {% block control_modal%}
   
