--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -105,6 +105,23 @@
                 </div>
             </li>
 
+            <li class="nav-item ">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseCompras" aria-expanded="true" aria-controls="collapseCompras">
+                  <i class="fas fa-fw fa-truck"></i>
+                  <span>Movimientos</span>
+                </a>
+                <div id="collapseCompras" class="collapse " aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                  <div class="bg-white py-2 collapse-inner rounded">
+                    <h6 class="collapse-header">Entradas</h6>
+                    <a class="collapse-item" href="{% url 'cmp:compras_list' %}">Compras</a>
+        
+                    <h6 class="collapse-header">Salidas</h6>
+                    <a class="collapse-item" href="#">Facturas</a>
+        
+                  </div>
+                </div>
+              </li>
+
             <!-- Nav Item - Utilities Collapse Menu -->
             <!-- <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
