--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -28,6 +28,8 @@
    <!-- jQuery Confirm -->
   <link rel="stylesheet" href="{% static 'base/vendor/jquery-confirm/jquery-confirm.min.css' %}">
 
+    <!-- XDSoft DateTimePicker -->  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" integrity="sha256-DOS9W6NR+NFe1fUhEE0PGKY/fubbUCnOfTje2JMDw3Y=" crossorigin="anonymous" />  
 
 </head>
 
@@ -483,8 +485,19 @@
   <script src="{% static 'base/vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
 
   <script src="{% static 'base/vendor/jquery-confirm/jquery-confirm.min.js' %}"></script>
+ 
+  <!-- XDSoft DateTimePicker -->  
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js" integrity="sha256-FEqEelWI3WouFOo2VWP/uJfs1y8KJ++FLh2Lbqc8SJk=" crossorigin="anonymous"></script>  
 
-
+  
+  <script>
+    $(document).ready(function () {
+      jQuery.datetimepicker.setLocale('es');
+    });
+</script>
+  
+  
+  
   {% block control_modal%}
   
   <script>
