--- a/app/cmp/templates/cmp/compras_list.html
+++ b/app/cmp/templates/cmp/compras_list.html
@@ -12,7 +12,7 @@
       <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
         <div class="dropdown-header">Acciones:</div>
         <a class="dropdown-item" href="{% url 'cmp:compras_new' %}"><i class="far fa-calendar-plus"></i> Nueva</a>
-        <a class="dropdown-item" href="#" target="reportes"><i class="fas fa-print"></i> Listado</a>
+        <a class="dropdown-item" href="{% url 'cmp:compras_print_all' %}" target="reportes"><i class="fas fa-print"></i> Listado</a>
       </div>
     </div>
   </div>
@@ -48,7 +48,7 @@
           <td>{{item.estado|yesno:"Activo,Inactivo"}}</td>
           <td>
             <a class="btn btn-warning btn-circle" href="{% url 'cmp:compras_edit' item.id %}"><i class="far fa-edit"></i></a>
-            <a class="btn btn-success btn-circle" href="#" target="reportes"><i class="fas fa-print"></i></a>
+            <a class="btn btn-success btn-circle" href="{% url 'cmp:compras_print_one' item.id %}" target="reportes"><i class="fas fa-print"></i></a>
           </td>
         </tr>
         {% endfor %}
