--- a/app/fac/templates/fac/cliente_list.html
+++ b/app/fac/templates/fac/cliente_list.html
@@ -11,7 +11,7 @@
       </a>
       <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
         <div class="dropdown-header">Acciones:</div>
-        <a class="dropdown-item" onclick="return abrir_modal('{% url 'fac:cliente_new' %}')" href="#"><i class="far fa-calendar-plus"></i> Nuevo</a>
+         <a class="dropdown-item" onclick="return abrir_modal('{% url 'fac:cliente_new' %}')" href="#"><i class="far fa-calendar-plus"></i> Nuevo</a> 
       </div>
     </div>
   </div>
@@ -20,11 +20,8 @@
     {% if not obj %}
     <div class="alert alert-info">No Hay Clientes</div>
     {% endif %}
-    <div class="buttons-toolbar">
-        <a class="dropdown-item" onclick="return abrir_modal('{% url 'fac:cliente_new' %}')" href="#"><i class="far fa-calendar-plus"></i> Nuevo</a>
-    </div>
-
-    <table 
+   
+    <table class="table table-striped table-hover dt-responsive nowrap" style="width:100%"
       id="table"
       data-toggle="table"
       data-pagination="true"
@@ -62,8 +59,7 @@
             </div>
           </td>
           <td>
-            <button class="btn btn-warning btn-circle" onclick="return abrir_modal('{% url 'fac:cliente_edit' item.id %}')"><i class="far fa-edit"></i></button>
-          </td>
+            <button class="btn btn-warning btn-circle" onclick="return abrir_modal('{% url 'fac:cliente_edit' item.id %}')"><i class="far fa-edit"></i></button> 
         </tr>
         {% endfor %}
       </tbody>
@@ -72,9 +68,13 @@
   </div>
 </div>
 {% endblock %}
+
 {% block javascript %}
 <script>
-  function inactivar(id)
+
+  
+  
+   function inactivar(id)
   {
     var data = {id:id};
     data = JSON.stringify(data);
@@ -102,10 +102,13 @@
         cerrar_modal();
       }
     });
-  }
+  } 
 // Call the dataTables jQuery plugin
 // $(document).ready(function() {
 //   $('.table').DataTable();
 // });
+$(document).ready(function() {
+  $('.table').DataTable();
+});
 </script>
 {% endblock %}
